--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -13,19 +13,23 @@
     </div>
   </div>
   <div class="row-fluid">
-    <div class="span3" id="side-menu">
-        <ul class="nav nav-list" >
-          <li class="nav-header">Documentation</li>
-          <li><a href="#beta">Beta Restrictions</a></li>
-          <li><a href="#getting-started">Getting Started</a></li>
-          <li><a href="#orders">Accepting Orders</a></li>
-          <li><a href="#payments">Payments</a></li>
-          <li><a href="#tickets">Tickets & Admission</a></li>
-          <li class="divider"></li>
-          <li class="nav-header">Information </li>
-          <li><a href="#tos">Terms of Service</a></li>
-          <li><a href="#privacy">Privacy Policy</a></li>
-        </ul>
+    <div class="span3" >
+      <div class="row-fluid">
+        <div id="side-menu" data-spy="affix" data-offset-top="0">
+          <ul class="nav nav-list" >
+            <li class="nav-header">Documentation</li>
+            <li><a href="#beta">Beta Restrictions</a></li>
+            <li><a href="#getting-started">Getting Started</a></li>
+            <li><a href="#orders">Accepting Orders</a></li>
+            <li><a href="#payments">Payments</a></li>
+            <li><a href="#tickets">Tickets & Admission</a></li>
+            <li class="divider"></li>
+            <li class="nav-header">Information </li>
+            <li><a href="#tos">Terms of Service</a></li>
+            <li><a href="#privacy">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
     </div> <!-- /span3 -->
     <div class="span9" id="info-page-content">
       <div class="row-fluid">
