affix working ok now

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -17,6 +17,7 @@ $small-max: 767px;
 $medium-min: $small-max + 1;
 $medium-max: 979px;
 $large-min: $medium-max + 1;
+$ipad-landscape: 1025px;
 $large-max: 1199px;
 $xlarge: 1200;
 
