--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -120,17 +120,17 @@
 }
 
 #side-menu  {
-  padding: 20px 50px;
+  padding: 20px;
+  @include media-above($ipad-landscape){
+    padding: 20px 50px;
+  }
   background: $white;
   box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
-  @include media-below($medium-max){
-    padding: 20px, 5px;
-  }
 }
 
 .affix {
-  @include media-below($medium-min){
+  @include media-below($medium-max){
     position: static;
     width: auto;
     top: 0;
