event users shaping up

--- a/app/views/application/_user_profile.html.erb
+++ b/app/views/application/_user_profile.html.erb
@@ -16,9 +16,9 @@
           <div class="span6 user-account">
             <dl>
               <dt>Name</dt>
-              <dd><%= current_user.user_name %></dd>
+              <dd><i class="icon-edit"></i><%= current_user.user_name %></dd>
               <dt>Email</dt>
-              <dd><%= current_user.user_email %></dd>
+              <dd><i class="icon-edit"></i><%= current_user.user_email %></dd>
               <dt>Password</dt>
               <dd><%= current_user.password_reset %></dd>
               <dt>Payments</dt>
