--- a/app/views/event_users/_form.html.erb
+++ b/app/views/event_users/_form.html.erb
@@ -1,10 +1,12 @@
-<%= simple_form_for(@event_user) do |f| %>
+<%= simple_form_for([:organizer, @event, @event_user], remote: true) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :event_id, as: :hidden, input_html: {value: @event.id} %>
     <%= f.input :email %>
-    <%= f.select :state, [['read', 0], ['edit', 1], ['admin', 2], ['organizer', 3]] %>
+    <%= f.input :state, label: "User Permissions" do %>
+      <%= f.select :state, [['read', :reader], ['edit', :editor], ['admin', :event_admin], ['organizer', :organizer]] %>
+    <% end %>
   </div>
 
   <div class="form-actions">
