--- a/app/views/event_users/index.html.erb
+++ b/app/views/event_users/index.html.erb
@@ -1,12 +1,34 @@
-<h1>Authorized Users for this event</h1>
-
-<%= link_to 'New Event user', new_organizer_event_event_user_path, remote: true, class: "new-auth-user" %>
-<hr>
-
-
-<% @event_users.each do |event_user| %>
-  <ul>
-    <li><%= event_user.user.profile.email %></li>
-    <li><%= event_user.state %></li>
-  </ul>
-<% end %>
+<div class="container">
+  <div class=>
+    <h3>Authorized Users</h3>
+    <div class="row-fluid">
+      <div class="span6">
+        <%= link_to 'Authorize a New User for this Event', new_organizer_event_event_user_path, remote: true, class: "new-auth-user btn btn-primary" %>
+      </div>
+    </div><br>
+    <div class="row-fluid">
+      <div class="span6 well">
+        <h4>Current Authorized Users</h4>
+        <table class="table table-striped" id="authorized-users">
+          <tr>
+            <th>Email</th>
+            <th>Permissions</th>
+            <th></th>
+          </tr>
+          <% @event_users.each do |event_user| %>
+            <tr>
+              <td><%= event_user.user.profile.email %></td>
+              <td><i class="icon-edit"> </i><%= best_in_place event_user, :state, :type => :select, :collection => [[:reader, 'read'], [:editor, 'edit'], [:event_admin, 'admin'], [:organizer, 'organizer']], path: organizer_event_event_user_path(@event, event_user) %></td>
+              <td><i class="icon-remove"> </i>remove</td>
+            </tr>
+          <% end %>
+        </table>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span4">
+        <%= link_to raw('<i class="icon-double-angle-left"></i> Event Admin'), organizer_event_path(@event), class: "btn btn-large" %>
+      </div>
+    </div>
+  </div>
+</div>
