--- a/app/views/event_users/create.js.erb
+++ b/app/views/event_users/create.js.erb
@@ -1,3 +1,3 @@
 $('#new_event_user').remove();
 $('.new-auth-user').show();
-$('#authorized_users').append('<%= j render(@event_user  ) %>')
+$('#authorized-users').append('<%= j render(@event_user) %>')
