--- a/app/views/user_mailer/event_admin_notification.html.erb
+++ b/app/views/user_mailer/event_admin_notification.html.erb
@@ -1,5 +1,5 @@
 <h4>100 Motels <small>tour the world without a record label</small></h4><br>
 <h5>Hi <%= @member_profile.email %></h5>
-<p><%= @inviter.profile.name || @inviter.profile.email  %> has invited you to become an administrator for: <%= "<strong>#{@event.title} in #{@event.venue}</strong>, a 100 Motels event that they are organizing" %>.</p><br>
-<p>You can check out the event here: <%= event_url(@event) %></p>
-<
+<p><%= @inviter.profile.email  %> has invited you to become an administrator for: <strong><%= @event.title %> in <%= @event.venue %> </strong> , a 100 Motels event that <%= @inviter.profile.email %> is organizing. </p><br>
+<p>You can check out the event here: <%= event_url(@event) %></p><br>
+<p>You can read more about 100 Motels here: <%= info_url %>.</p>
