--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -40,7 +40,7 @@
           </h3>
           <p><a href="https://stripe.com" class="stripe-connect light-blue dark"><span>stripe payments</span></a></p>
           <p>
-            <strong>100 Motels is a 'Stripe App'</strong> meaning there is only a full service in the countries Stripe service, currently the US and Canada.
+            <strong>100 Motels is a 'Stripe App'</strong> meaning there is only a full service in the countries Stripe support, currently the US and Canada.
           </p>
           <p> You can run events and charge credit cards in any country but in order to receive money you need a USD or CAD bank account.</p>
           <p>
@@ -60,7 +60,7 @@
         <div class="span12">
           <h3 id="getting-started">
             <i class=""></i> Getting Started with 100 Motels <br>
-            <small>If you need help or have a question at any time, <%= link_to "don't hesitate to ask" %>. </small>
+            <small>If you need help or have a question at any time, <a id="Intercom" href="mailto:fc8518d2134e8c1f1d72067b7e19a67d63f6bbed@incoming.intercom.io">don't hesitate to ask</a>. </small>
           </h3><br>
           <h4>Try it Free</h4>
           <p> If you click on <a href class="btn btn-small btn-success">Try it free</a> an event and an account are created for you which can be optionally saved. If you browse away from 100 Motels they are automatically discarded.</p><br>
@@ -86,9 +86,9 @@
             <dt>Read this...</dt>
             <dd>A text area for biographical or other information regarding your event, html is escaped.</dd>
             <dt>Venue</dt>
-            <dd>The name of the venue, e.g. "The Mounto Club</dd>
+            <dd>The name of the venue, e.g. "The Mounto Club"</dd>
             <dt>Address</dt>
-            <dd>The exact street address, e.g "Mount St Lwr, Dublin 2.</dd>
+            <dd>The exact street address, e.g "Mount St Lower, Dublin 2".</dd>
             <dt>Doors</dt>
             <dd>Input the time in 24 hour format.</dd>
             <dt>Video field</dt>
@@ -105,7 +105,7 @@
           </dl>
           <span class="label">Background Image</span>
           <br>
-          <p>Can be set via the edit form or <a href=""><i class="icon-cog"></i>event settings</a>. Take a picture, upload an image or choose from a third party service of your choosing.</p>
+          <p>Can be set via the edit form or <a href=""><i class="icon-cog"></i>event settings</a>. Take a picture, upload an image or pick from a third party service of your choosing.</p>
           <span class="label">Event Visibility</span>
           <br>
           <p>By default your event is private <i class="icon-eye-close"> </i> meaning only the signed-in owner or other authorized users can view it. You can change the event to published <i class="icon-eye-open"> </i> in <a href=""><i class="icon-cog"></i>event settings</a>, the edit form or in the Event Admin area.</p>
@@ -146,7 +146,7 @@
           <ul>
             <li>View, publish, edit your event or create a new one.</li>
             <li>Create pdfs for orders or tickets.</li>
-            <li>The check in view can be used to manage admissions to the event.</li>
+            <li>The check-in view can be used to manage admissions to the event.</li>
           </ul>
           <span class="label"><i class="icon-filter"></i> filter orders</span>
           <p>By default the window view lists all orders, you can filter the list by order state using the provided controls. This becomes more useful when you're working with payments. </p>
@@ -197,10 +197,10 @@
           <p>Another reason for failure is credit card expiry. If a customer's card has expired they will be notified by email with a link to update their card. Once the card has been updated the charge will be processed and tickets issued.</p><br>
           <h4>Receiving Money</h4>
           <p> The event organizer is paid into his or her account seven days after each successful charge. This is in accordance with Stripe's rules on paying out.</p>
-          <p> 100 Motels never actually holds or processes the proceeds from ticket sales. All payments processing is handled directly by Stripe, all payments transfers to directly to the organizer's Stripe account. </p><br>
+          <p> 100 Motels never actually holds or processes the proceeds from ticket sales. All payments processing is handled directly by Stripe, all payment transfers go directly to the organizer's Stripe account. </p><br>
           <h4>Fees</h4>
           <p>Stripe's processing fee is 2.9% + 30c per transaction.</p>
-          <p>100 Motel's fee is 1% per transaction while in beta.</p>
+          <p>100 Motels' fee is 1% per transaction while in beta.</p>
           <br>
           <h4>Refunds</h4>
           <p>Your customer will be credited with the full price of their refunded order, i.e. the ticket price + fees.</p>
@@ -240,7 +240,7 @@
           <h5>1. Acceptance of the Terms of Service</h5>
           <p>Welcome to <strong>100 Motels</strong> (a.k.a. "<strong>we</strong>" or "<strong>us</strong>" or the "<strong>Company</strong>"). We are excited to have you as user and member of the community. The following terms and conditions (collectively, these "<strong>Terms of Service</strong>") apply to your use of www.100 Motels.com, including any content, functionality and services offered on or via 100 Motels.com (the "<strong>Website</strong>"). The Terms of Service also include our <strong>Privacy Policy</strong></p>
           <p>We want to keep our relationship with you as lean and informal as possible, but please read the Terms of Service carefully before you start using 100 Motels, because <strong>by using the Website you accept and agree to be bound and abide by these Terms of Service</strong>.</p>
-          <p>Should you disagree with some of the provisions herein, you can either leave the Website, or contact us at by clicking the 'support' link on the site's navigation bar. <strong>>, and we'll be happy to hear your comments and suggestions</strong>.</p>
+          <p>Should you disagree with some of the provisions herein, you can either leave the Website, or contact us at by clicking the 'support' link on the site's navigation bar. </p>
           <h5>2. Changes to the Terms of Service and the Website</h5>
           <p>100 Motels is a work in progress, meaning that a lot will change in the near future. We reserve the right to update the Website and these Terms of Service from time to time, at our discretion. We will make sure to announce any major change in a prominent way. <strong>Your continued use of the Website following the publishing of updated Terms of Service means that you accept and agree to the changes.</strong></p>
           <h5>3. Accessing the Website,Security and Privacy</h5>
@@ -249,7 +249,7 @@
           <p>It is a condition of your use of the Website that all the information you provide on the Website is correct, current and complete. In the future, you may be asked to provide certain registration details or other information. As custom for internet websites, we reserve the right to disable any user account, at any time in our sole discretion for any or no reason, including, if in our opinion you have failed to comply with any provision of these Terms of Service. </p>
           <p>We use SSL encrypted browsing for all logged-in users, but we cannot guarantee that all use will be secure. We also do not guarantee that the Website or any content provided on the Website is error free. We manage your personal data according to our <strong><a href="http://www.100 Motels.com/65/privacy-policy-of-100 Motels-com" target="_blank">Privacy Policy</a></strong>.</p>
           <h5>4. Intellectual Property Rights and Use Guidelines.</h5>
-          <p>The Website and its original content, features and functionality (including look!), are owned by 100 Motels and are protected by Irish and international copyright, trademark, patent, trade secret and other intellectual property or proprietary rights laws. 100 Motels is about helping artists perform, not Website, design or code. So you agree to not copy, modify, create derivative works of, publicly display, publicly perform, republish, any of our copyrighted material, except to the extent permitted by the Website itself. If you have doubts about whether and how to use of material on the Website, please contact support.</p>
+          <p>The Website and its original content, features and functionality (including look!), are owned by 100 Motels and are protected by Irish and international copyright, trademark, patent, trade secret and other intellectual property or proprietary rights laws. 100 Motels is about helping artists perform, not Website, design or code. So you agree to not copy, modify, create derivative works of, publicly display, publicly perform, republish, any of our copyrighted material, except to the extent permitted by the Website itself. If you have doubts about whether and how to use of material on the Website, please contact <a id="intercom" href="#">support</a>.</p>
           <p>For purposes of these Terms of Service, the term “<strong>Content</strong>” includes, without limitation, information, data, text, photographs, videos, audio clips, written posts and comments, software, scripts, graphics, and interactive features generated, provided, or otherwise made accessible on or through the Website. For the purposes of these Terms of Service, “Content” also includes all User Content (as defined below).</p>
           <p>All Content added, created, uploaded, submitted, distributed, or posted to the Website by users (collectively “<strong>User Content</strong>”), whether publicly posted or privately transmitted, is the sole responsibility of the person who originated such User Content. You represent that all User Content provided by you is accurate, complete, up-to-date, and in compliance with all applicable laws, rules and regulations. You acknowledge that all Content, including User Content, accessed by you using the Website is at your own risk and you will be solely responsible for any damage or loss to you or any other party resulting therefrom. We do not guarantee that any Content you access on or through the Website is or will continue to be accurate.</p>
           <p>By submitting <strong style="">public</strong> User Content through the Website, you hereby do and shall grant us a worldwide, non-exclusive, perpetual, royalty-free, fully paid, sublicensable and transferable license to use, edit, modify, reproduce, distribute, prepare derivative works of, display, perform, and otherwise fully exploit the User Content in connection with the Website and our (and our successors’ and assigns’) businesses, including without limitation for promoting and redistributing part or all of the Website (and derivative works thereof) in any media formats and through any media channels (including, without limitation, third party websites and feeds). You also hereby do and shall grant each user of the Website a non-exclusive, perpetual license to access your User Content through the Website, and to use, edit, modify, reproduce, distribute, prepare derivative works of, display and perform such User Content. For clarity, <strong style="">the foregoing license grants to us and our users does not affect your other ownership or license rights in your User Content</strong>, including the right to grant additional licenses to your User Content, unless otherwise agreed in writing. You represent and warrant that you have all rights to grant such licenses to us without infringement or violation of any third party rights, including without limitation, any privacy rights, publicity rights, copyrights, trademarks, contract rights, or any other intellectual property or proprietary rights.</p>
@@ -272,7 +272,7 @@
            <li>Not give the impression that they emanate from us or any other person or entity, if this is not the case.</li>
           </ul>
           <p><span class="annotation">As stated above, all the user generated legal documents are in the public domain, unless otherwise specified by the author. The rest of the content (e.g. private documents, comments, description, guides, etc) is creative work, therefore covered by copyright. We claim no intellectual property rights over the User Content. Your content remain yours. However, by setting your documents to be viewed publicly, or commenting in public, you agree to allow others to view, comment, edit and branch your content, and you grant us the right to use, copy, distribute and disclose to third parties the content for any purpose.</span></p>
-          <p><strong>User Content is not intended to be legal advice nor form an attorney-client relationship, nor among the users, nor between the users and 100 Motels</strong>.<strong>Use of the Website should never be understood to be replacing use of a qualified attorney, and 100 Motel's relationship to all documents and transactions completed using the Website is that of a trusted, disinterested third party. </strong></p>
+          <p><strong>User Content is not intended to be legal advice nor form an attorney-client relationship, nor among the users, nor between the users and 100 Motels</strong>.<strong>Use of the Website should never be understood to be replacing use of a qualified attorney, and 100 Motels' relationship to all documents and transactions completed using the Website is that of a trusted, disinterested third party. </strong></p>
           <h5>6. Law and Copyright Infringment</h5>
           <p>We do not undertake to review all material before it is posted on the Website, and cannot ensure prompt removal of objectionable material after it has been posted. Accordingly, we assume no liability for any action or inaction regarding transmissions, communications or content provided by any user or third party. In the unlikely event we receive a disclosure request from an authorized party, we reserve the right to disclose user identities when required to do so by the law, including in response to a law enforcement request supported by a valid court order. You waive and hold harmless the Company from any claims resulting from any action taken by the Company during or as a result of its investigations and from any actions taken as a consequence of investigations by either the Company or law enforcement authorities.</p>
           <p>If you believe that any User Content violate your copyright, please follow the procedure set forth by article 512(c) of the DMCA and provide us a written takedown notice including the following information: </p>
@@ -292,7 +292,7 @@
           <h5>10. Waiver and Severability</h5>
           <p>Our failure to exercise or enforce any right or provision of the Terms of Service shall not constitute a waiver of such right or provision. The Terms of Service constitutes the entire agreement between you and 100 Motels and govern your use of the service, superseding any prior agreements (including, but not limited to, any prior versions of the Terms of Service). If any provision of these Terms of Service is held by a court of competent jurisdiction to be invalid, illegal or unenforceable for any reason, such provision shall be eliminated or limited to the minimum extent such that the remaining provisions of the Terms of Service will continue in full force and effect.</p>
           <h5>11. Feedback</h5>
-          <p>We welcome any comment, question and communication - contact us via <a href="">support</a> </p>
+          <p>We welcome any comment, question and communication - contact us via <a id="Intercom" href="mailto:fc8518d2134e8c1f1d72067b7e19a67d63f6bbed@incoming.intercom.io">support</a> </p>
         </div>
       </div>
       <hr class="fancy-hr">
@@ -323,13 +323,13 @@
             <p>100 Motels is operated from Ireland. If you are visiting the Website from outside Ireland, you agree to any processing of any personal information you provide us according to this policy.</p>
             <p>100 Motels may contact you, by email or other means. For example, 100 Motels may send you emails relating to 100 Motels or other third parties, or communicate with you about your use of the 100 Motels website. 100 Motels may also use technology to alert you via a confirmation email when you open an email from us. If you do not want to receive email from 100 Motels, please contact support.</p>
             <p><strong>Sharing of Data</strong></p>
-            <p>We don't share your personal information with third parties. Only aggregated, anonymized data is periodically transmitted to external services to help us improve the 100 Motels Website and service. We currently use Google Analytics (traffic analysis, SEO optimization), Stripe (payments), Filepicker.io (image processing) and Intercom (customer support). </p>
+            <p>We don't share your personal information with third parties. Only aggregated, anonymized data is periodically transmitted to external services to us improve the 100 Motels Website and service. We currently use Google Analytics (traffic analysis, SEO optimization), Stripe (payments), Filepicker.io (image processing) and Intercom (customer support). </p>
             <p>We also use social buttons provided by services like Twitter and Facebook. Your use of these third party services is entirely optional. We are not responsible for the privacy policies and/or practices of these third party services, and you are responsible for reading and understanding those third party services’ privacy policies.</p>
             <p>We employ and contract with people and other entities that perform certain tasks on our behalf and who are under our control (our “Agents”). We may need to share personal information with our Agents in order to provide products or services to you. Unless we tell you differently, our Agents do not have any right to use Personal Information or other information we share with them beyond what is necessary to assist us. You hereby consent to our sharing of Personal Information with our Agents.</p>
             <p>We may choose to buy or sell assets. In these types of transactions, user information is typically one of the transferred business assets. Moreover, if we, or substantially all of our assets, were acquired, or if we go out of business or enter bankruptcy, user information would be one of the assets that is transferred or acquired by a third party. You acknowledge that such transfers may occur, and that any acquirer of us or our assets may continue to use your personal information as set forth in this policy.</p>
             <p><strong>Changes to the Privacy Policy</strong></p>
             <p>We may amend this Privacy Policy from time to time. Use of information we collect now is subject to the Privacy Policy in effect at the time such information is used. If we make major changes in the way we collect or use information, we will notify you by posting an announcement on the Website or sending you an email. In any case, you can track all changes via the TOS Tracker. A user is bound by any changes to the Privacy Policy when he or she uses the Services after such changes have been first posted.</p>
-            <p>Should you have any question or concern, please contact us via <a href="">support</a>.</p>
+            <p>Should you have any question or concern, please contact us via <a id="Intercom" href="mailto:fc8518d2134e8c1f1d72067b7e19a67d63f6bbed@incoming.intercom.io">support</a>.</p>
         </div>
       </div>
     </div><!--/span-->
