falsh validations working finally

--- a/app/views/organizer/event_users/index.html.erb
+++ b/app/views/organizer/event_users/index.html.erb
@@ -2,6 +2,7 @@
   <div class=>
     <h3>Authorized Users</h3>
     <div class="row-fluid">
+      <div class="span12" id="event-user-validations"></div>
       <div class="span6">
         <%= link_to 'Authorize a New User for this Event', new_organizer_event_event_user_path, remote: true, class: "new-auth-user btn btn-primary" %>
       </div>
