--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -63,7 +63,7 @@
 							</div>
 						</h3>
 						<h3 class="visible-desktop">
-							<small>please share!</small>
+							<small>share</small>
 							<div class="addthis_toolbox">
 								<div class="custom_images">
 									<a class="addthis_button_facebook"><i class="icon-facebook"></i></a>
