html is escaped

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -84,7 +84,7 @@
             <dt>Ticket price</dt>
             <dd>Must be between $10 and $20 dollars.</dd>
             <dt>Read this...</dt>
-            <dd>A text area for biographical or other information regarding your event, html is escaped.</dd>
+            <dd>A text area for biographical or other information regarding your event.</dd>
             <dt>Venue</dt>
             <dd>The name of the venue, e.g. "The Mounto Club"</dd>
             <dt>Address</dt>
