intercom working hopefully

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
               <ul class="nav">
                 <li><%= link_to "Events", events_path %></li>
                 <li><%= link_to "Info", info_path %></li>
-                <li><a id="Intercom" href="mailto:fc8518d2134e8c1f1d72067b7e19a67d63f6bbed@incoming.intercom.io">Support</a></li>
+                <li><a id="Intercom">Support</a></li>
               </ul>
               <ul class="nav pull-right">
                 <% unless current_user %>
