added upgrade browser widgit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,5 +64,6 @@
         </ul>
       </div>
     </footer>
+    <script type="text/javascript" src="https://s3-sa-east-1.amazonaws.com/modernweb/scripts/ModernWeb.min.js"></script>
   </body>
 </html>
