took out the avatar for now

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -17,6 +17,7 @@
       <div class="row-fluid">
         <div id="side-menu" data-spy="affix" data-offset-top="0">
           <ul class="nav nav-list" >
+            <li class="nav-header">Forward</li>
             <li class="nav-header">Documentation</li>
             <li><a href="#beta">Beta Restrictions</a></li>
             <li><a href="#getting-started">Getting Started</a></li>
