--- a/app/views/application/_user_profile.html.erb
+++ b/app/views/application/_user_profile.html.erb
@@ -7,12 +7,12 @@
     <div class="modal-body">
       <div class="container">
         <div class="row-fluid">
-          <div class="span6 pagination-centered" id="member-avatar">
-            <%= current_user.avatar %>
-            <%= form_for current_user.profile do |f| %>
-              <%= f.filepicker_field(:avatar,
+          <!-- <div class="span6 pagination-centered" id="member-avatar">
+            <%#= current_user.avatar %>
+            <%#= form_for current_user.profile do |f| %>
+              <%#= f.filepicker_field(:avatar,
                onchange: "$('#member-avatar img').attr('src', event.fpfile.url).attr('fit', 'clip').attr('height', '200').attr('width', '200');", button_text: "Change Avatar", button_class: "btn") %>
-          </div>
+          </div> -->
           <div class="span6 user-account">
             <dl>
               <dt>Name</dt>
@@ -33,9 +33,9 @@
       </div>
     </div>
     <div class="modal-footer">
-        <%= f.submit "Save", class: "btn btn-primary" %>
-       <button class="btn" data-dismiss="modal">Exit</button>
+        <%#= f.submit "Save", class: "btn btn-primary" %>
+       <button class="btn" data-dismiss="modal">Done</button>
     </div>
   </div>
-  <% end %>
+  <%# end %>
 <% end %>
