small ajdustemets to info and interomc

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -33,7 +33,7 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-beaker"></i> Beta</h3>
       <hr>
-      <p class="lead">Capacity and pricing limits as well as geographic restrictions apply during beta.</p>
+      <p class="lead">If you want to participate (please do!) be aware that some restrictions apply.</p>
       <%= link_to "More", info_path(anchor: "beta"), class: "btn btn-large" %>
     </div>
     <div class="span6 well">
