--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -19,7 +19,7 @@
           <ul class="nav nav-list" >
             <li class="nav-header">Forward</li>
             <li class="nav-header">Documentation</li>
-            <li><a href="#beta">Beta Restrictions</a></li>
+            <li><a href="#beta">Beta Participation</a></li>
             <li><a href="#getting-started">Getting Started</a></li>
             <li><a href="#orders">Accepting Orders</a></li>
             <li><a href="#payments">Payments</a></li>
@@ -35,8 +35,44 @@
     <div class="span9" id="info-page-content">
       <div class="row-fluid">
         <div class="span12">
+          <h3 id="forward">
+            <em>Forward</em><br>
+            <!-- <small>100 Motels is very much a work-in-progress, all feedback appreciated!</small> -->
+          </h3>
+          <p>
+            As my own band started to gain listeners around the world I began to think on the problem of how best to organize tours without being affiliated to, or involved in, the record business.
+          </p>
+          <p>
+            100 Motels sprung from the idea that a future tour date could and should be developed from the moment someone expressed an interest in us, even if it was just one person in one place.
+          </p>
+          <p>
+            With the advent of modern payments processing systems, it is now possible to have very flexible pre-ordering arrangements allowing (within reason) an unlimited funding window for our shows with zero costs up-front.
+          </p>
+          <p>
+            Combining the former with web-ticketing and checking, I’ve also added (or am in the process of adding) tools that make it easy to reschedule, reorganize or cancel shows.
+          </p>
+          <p>
+            From experience, it can take a few attempts to get the required numbers or cash for a viable show and other factors can crop up to force a postponement or cancellation.
+          </p>
+          <p>
+            If you're going to miss a deadline for whatever reason, 100 Motels lets you ‘save your progress’ and try again later or walk away untroubled by cancellation fees and complex refunding procedures.
+          </p>
+          <p>
+            Overall, the aspiration of 100 Motels is make touring as viable an independent enterprise as making and distributing music is today.
+          </p>
+          <p>
+            As heartening as the web-driven emancipation of music has been, the job won't be fully done until we tour as freely as we record and listen.
+          </p><br>
+          <p>
+            <strong>Seo</strong>
+          </p>
+        </div>
+      </div>
+      <hr class="fancy-hr">
+      <div class="row-fluid">
+        <div class="span12">
           <h3 id="beta">
-            <i class="icon-beaker"></i>Beta Restrictions <br>
+            <i class="icon-beaker"></i>Beta Participation <br>
             <small>Anyone can try out 100 Motels and have a look around but if you intend to use it during beta for your tour, read this first... </small>
           </h3>
           <p><a href="https://stripe.com" class="stripe-connect light-blue dark"><span>stripe payments</span></a></p>
