--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -17,9 +17,11 @@
       <div class="row-fluid">
         <div id="side-menu" data-spy="affix" data-offset-top="0">
           <ul class="nav nav-list" >
-            <li class="nav-header">Forward</li>
-            <li class="nav-header">Documentation</li>
+            <li class="nav-header">Welcome!</li>
+            <li><a href="#forward">Forward</a></li>
             <li><a href="#beta">Beta Participation</a></li>
+            <li class="divider"></li>
+            <li class="nav-header">Documentation</li>
             <li><a href="#getting-started">Getting Started</a></li>
             <li><a href="#orders">Accepting Orders</a></li>
             <li><a href="#payments">Payments</a></li>
@@ -28,6 +30,7 @@
             <li class="nav-header">Information </li>
             <li><a href="#tos">Terms of Service</a></li>
             <li><a href="#privacy">Privacy Policy</a></li>
+            <li class="divider"></li>
           </ul>
         </div>
       </div>
@@ -58,10 +61,10 @@
             If you're going to miss a deadline for whatever reason, 100 Motels lets you ‘save your progress’ and try again later or walk away untroubled by cancellation fees and complex refunding procedures.
           </p>
           <p>
-            Overall, the aspiration of 100 Motels is make touring as viable an independent enterprise as making and distributing music is today.
+            Overall, the aspiration of 100 Motels is to make touring as viable an independent enterprise as making and distributing music is today.
           </p>
           <p>
-            As heartening as the web-driven emancipation of music has been, the job won't be fully done until we tour as freely as we record and listen.
+            I feel lucky to have witnessed first-hand the web-driven emancipation of music, but the job won't be fully done until we tour as freely as we record and listen.
           </p><br>
           <p>
             <strong>Seo</strong>
@@ -75,6 +78,10 @@
             <i class="icon-beaker"></i>Beta Participation <br>
             <small>Anyone can try out 100 Motels and have a look around but if you intend to use it during beta for your tour, read this first... </small>
           </h3>
+          <div class="alert">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong><small><i class="icon-asterisk"></i></small> Contact support to activate payments!</strong> This is only a temporary control measure. Thanks for your patience.
+          </div>
           <p><a href="https://stripe.com" class="stripe-connect light-blue dark"><span>stripe payments</span></a></p>
           <p>
             <strong>100 Motels is a 'Stripe App'</strong> meaning there is only a full service in the countries Stripe support, currently the US and Canada.
