--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -74,7 +74,7 @@
 						</h3>
 
 						<% if @event.on_sale? %>
-							<h4><%= @event.left_to_go %> left to sell <%= @event.sales %> tickets <i class="icon-question-sign" data-toggle="popover" title="" data-content="Go to the 'Info' page for more on how event funding works"></i></h4>
+							<h4><%= @event.left_to_go %> left to sell <%= @event.sales %> tickets <i class="icon-question-sign" data-toggle="popover" title="" data-content="Go to the Inof page for more on how event funding works"></i></h4>
 							<div class="progress">
 							  <div class="bar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
 							</div>
@@ -91,7 +91,7 @@
 							<h3><%= @event.edit_icon %> <%= @event.price %><small> each</small></h3>
 							<%= @event.ticket_form %>
 							<h3><%= @event.order_total %>
-								<small><span class="charge-info" data-toggle="popover" title="" data-content="Card Processing is 2.9% + 30c + our fee (1% - 2.5% dependant on the type of event)" data-original-title="Processing Fees" data-placement="bottom">
+								<small><span class="charge-info" data-toggle="popover" title="" data-content="Card Processing is 2.9% + 30c + our fee (currently 1%)" data-original-title="Processing Fees" data-placement="bottom">
 									inc.charges
 								  </span>
 	      				</small>
