--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
                 <li><%= link_to "Events", events_path %></li>
                 <li><%= link_to "Info", info_path %></li>
                 <li><a id="Intercom">Support</a></li>
+                <li><a href="http://www.hipchat.com/g0s1iGFVm" target="_blank">Live Chat</a></li>
               </ul>
               <ul class="nav pull-right">
                 <% unless current_user %>
