--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -18,7 +18,7 @@
         <div id="side-menu" data-spy="affix" data-offset-top="0">
           <ul class="nav nav-list" >
             <li class="nav-header">Welcome!</li>
-            <li><a href="#forward">Forward</a></li>
+            <li><a href="#forward">Foreword</a></li>
             <li><a href="#beta">Beta Participation</a></li>
             <li class="divider"></li>
             <li class="nav-header">Documentation</li>
@@ -39,7 +39,7 @@
       <div class="row-fluid">
         <div class="span12">
           <h3 id="forward">
-            <em>Forward</em><br>
+            <em>Foreword</em><br>
             <!-- <small>100 Motels is very much a work-in-progress, all feedback appreciated!</small> -->
           </h3>
           <p>
