--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -31,6 +31,7 @@
           <li><%= link_to "Terms of Service", info_path %></li>
           <li><%= link_to "Legal and Privacy", info_path %></li>
           <li><%= link_to "Info and Help", info_path %></li>
+          <li><%= link_to "Sign Up", signup_path %></li>
         </ul>
       </div>
     </footer>
